--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -108,3 +108,52 @@ a {
 .gallery__title {
 	grid-column: 1/4;
 }
+
+.gallery__carousel {
+	grid-column: 1/4;
+	position: relative;
+	height: 300px;
+}
+
+@keyframes display {
+	0% {
+		transform: translateX(200px);
+		opacity: 0;
+	}
+	10% {
+		ransform: translateX(0);
+		opacity: 1;
+	}
+	20% {
+		transform: translateX(0);
+		opacity: 1;
+	}
+	30% {
+		transform: translateX(-200px);
+		opacity: 0;
+	}
+	100% {
+		transform: translateX(-200px);
+		opacity: 0;
+	}
+}
+.gallery__carousel__image {
+	width: 500px;
+	position: absolute;
+	top: 0;
+	left: calc(50% - 250px);
+	opacity: 0;
+	animation: display 10s infinite;
+}
+
+.gallery__carousel__image:nth-child(2) {
+  animation-delay: 2s;
+}
+.gallery__carousel__image:nth-child(3) {
+  animation-delay: 4s;
+}
+.gallery__carousel__image:nth-child(4) {
+  animation-delay: 6s;
+}
+
+
