--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -1,8 +1,3 @@
-<!-- Author: Diego Alberto Quiroz García -->
-<!-- Desarrollo de Aplicaciones web -->
-<!-- 1 de febrero de 2021 -->
-<!-- Proyecto: Resu.me -->
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -37,31 +32,31 @@
 		<img class="header__image" src="static/images/hero.png" alt="Portfolios">
 	</header>
 
-	<!-- Body of the landing page -->
+    <!-- Body of the landing page -->
 	<main>
 
 		<!-- About section (mission and vision) -->
 		<section class="about container" id="about">
 			<div class="about__title">
-				<h5 id="about--titulo"></h5>
-				<h1 id="about--sub"></h1>
+				<h5>NOSOTROS</h5>
+				<h1>Nuestra misión eres tú</h1>
 				<p>Resu.me es una plataforma para crear portafolios virtuales sin necesidad de preocuparte de mantener, diseñar, crear y lanzar un sitio web. Inicia tu portafolio virtual como todo un profesional.</p>
 			</div>
 			<div class="about__item">
-				<h2 id="mision--titulo"></h2>
-				<p id="mision--cont"></p>
+				<h2>Misión</h2>
+				<p>Ayudar a profesionales a tener un portafolio virtual, blog y currículum de manera fácil y escalable.</p>
 			</div>
 			<div class="about__item">
-				<h2 id="vision--titulo"></h2>
-				<p id="vision--cont"></p>
+				<h2>Visión</h2>
+				<p>Ser la plataforma líder en la generación de currículums, resúmenes y portafolios para los profesionales de mañana.</p>
 			</div>
 		</section>
 
 		<!-- Description of services -->
 		<section class="features container" id="features">
 			<div class="features__title">
-				<h5 id="servicios--titulo"></h5>
-				<h1 id="servicios--sub"></h1>
+				<h5>SERVICIOS</h5>
+				<h1>¿Listo para un portafolio y CV reales?</h1>
 			</div>
 			<div class="features__list">
 				
@@ -114,8 +109,8 @@
 		<!-- Image gallery -->
 		<section class="gallery container" id="images">
 			<div class="gallery__title">
-				<h5 id="imagenes--titulo"></h5>
-				<h1 id="imagenes--sub"></h1>
+				<h5>IMÁGENES</h5>
+				<h1>Mira a otros utilizando Resu.me</h1>
 			</div>
 
 			<div class="gallery__carousel">
@@ -149,14 +144,6 @@
 			<button class="contact__form__input contact__form__input--button" id="contact__form__input--button">Enviar</button>
 		</section>
 
-		<section class="styles container">
-			<div class="styles__title">
-				<h5 id="estilos--titulo"></h5>
-				<h1 id="estilos--sub"></h1>
-			</div>
-			
-			<button class="styles__toggle" id="styles__toggle">Toggle</button>
-		</section>
 	</main>
 
 	<!-- Foot of the landing page -->
